<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home" />
        <item
            android:id="@+id/nav_mapa"
            android:title="@string/nav_map"
            android:icon="@drawable/ic_mapa" />
        <item
            android:id="@+id/nav_add_location"
            android:title="@string/nav_add_location"
            android:icon="@drawable/ic_anadir" />
        <item
            android:id="@+id/nav_change_language"
            android:title="@string/nav_change_language"
            android:icon="@drawable/ic_language" />
        <item
            android:id="@+id/nav_dark_mode"
            android:title="@string/nav_dark_mode"
            android:icon="@drawable/ic_oscuro" />
    </group>
    <!-- Opción de configuración para personalizar los ítems de la Toolbar -->
    <item
        android:id="@+id/nav_config"
        android:title="@string/nav_config"
        android:icon="@drawable/ic_settings" />
    <item
        android:id="@+id/nav_exit"
        android:title="@string/nav_exit"
        android:icon="@drawable/ic_salir" />
</menu>
