<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Opción de búsqueda con SearchView -->
    <item
        android:id="@+id/action_search"
        android:title="@string/search_location"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <!-- Opción para exportar (descargar) ubicaciones -->
    <item
        android:id="@+id/action_export"
        android:title="@string/export_locations_menu"
        android:icon="@drawable/ic_descarga"
        app:showAsAction="always" />

    <!-- Opción para salir de la aplicación -->
    <item
        android:id="@+id/action_salir"
        android:title="@string/exit"
        android:icon="@drawable/ic_salir"
        app:showAsAction="always" />

</menu>
